--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8" />
 	<title>Snake</title>
-	<link rel="stylesheet" href="./styles.css">
+	<link rel="shortcut icon" href="./favicon.ico"/>
+	<link rel="stylesheet" href="./styles.css"/>
 </head>
 <body>
 	<noscript>Your browser does not support JavaScript.</noscript>
