--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8" />
+	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, user-scalable=no"/>
 	<title>Snake</title>
 	<link rel="shortcut icon" href="./favicon.ico"/>
 	<link rel="stylesheet" href="./styles.css"/>
