Add links to the source code and my website
Fixes #15

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
 				initialDelayMs: getInputNumber('delay-ms')
 			})">Custom</button>
 		</div>
+		<div class="credits">
+			<a href="https://github.com/ArtskydJ/web-snake">View on Github</a> &#8212;
+			Made by <a href="http://www.josephdykstra.com">Joseph Dykstra</a>
+		</div>
 	</div>
 	<script src="./bundle.js"></script>
 	<script>
